build: Tweak ChangeLog generation.
* Makefile.am (gen-ChangeLogs): Untabify rule. Pass option '--no-cluster'.

--- a/Makefile.am
+++ b/Makefile.am
@@ -109,22 +109,22 @@ dist-hook: gen-ChangeLogs
 gen_start_date = 2015-10-13
 .PHONY: gen-ChangeLogs
 gen-ChangeLogs:
-	$(AM_V_GEN)if test -d .git; then				\
-	  log_fix="$(srcdir)/build-aux/git-log-fix";			\
-	  test -e "$$log_fix"						\
-	    && amend_git_log="--amend=$$log_fix"			\
-	    || amend_git_log=;						\
-	  for d in . gettext-runtime/intl gettext-runtime/po		\
-		gettext-tools/po; do					\
-	    test "$$d" = "."						\
-	      && cldir="$(distdir)"					\
-	      || cldir="$(distdir)/$$d";				\
-	    $(top_srcdir)/build-aux/gitlog-to-changelog			\
-	      $$amend_git_log --since=$(gen_start_date) -- "$$d"	\
-		> "$$cldir/cl-t" &&					\
-	    { rm -f "$$cldir/ChangeLog" &&				\
-	      mv "$$cldir/cl-t" "$$cldir/ChangeLog"; };			\
-	  done;								\
+	$(AM_V_GEN)if test -d .git; then                                       \
+	  log_fix="$(srcdir)/build-aux/git-log-fix";                           \
+	  test -e "$$log_fix"                                                  \
+	    && amend_git_log="--amend=$$log_fix"                               \
+	    || amend_git_log=;                                                 \
+	  for d in . gettext-runtime/intl gettext-runtime/po gettext-tools/po; \
+	  do                                                                   \
+	    test "$$d" = "."                                                   \
+	      && cldir="$(distdir)"                                            \
+	      || cldir="$(distdir)/$$d";                                       \
+	    $(top_srcdir)/build-aux/gitlog-to-changelog                        \
+	      $$amend_git_log --no-cluster --since=$(gen_start_date) -- "$$d"  \
+	      > "$$cldir/ChangeLog-t"                                          \
+	      && rm -f "$$cldir/ChangeLog"                                     \
+	      && mv "$$cldir/ChangeLog-t" "$$cldir/ChangeLog";                 \
+	  done;                                                                \
 	fi
 
 
