Modernize Java compiler invocations.
The currently used Java version in the industry is Java 8 or newer, since 2022.
See <https://en.wikipedia.org/wiki/Java_version_history>. And on macOS 11..13,
I'm seeing the "error: Source option 6 is no longer supported. Use 8 or later."

* gettext-runtime/configure.ac: Search for a Java compiler with source and
target 1.8.
* gettext-tools/configure.ac: Search for a Java compiler with source 1.8.
* gettext-tools/examples/hello-java/configure.ac: Likewise.
* gettext-tools/examples/hello-java-awt/configure.ac: Likewise.
* gettext-tools/examples/hello-java-swing/configure.ac: Likewise.

--- a/gettext-runtime/configure.ac
+++ b/gettext-runtime/configure.ac
@@ -1,5 +1,5 @@
 dnl Configuration for the gettext-runtime directory of GNU gettext
-dnl Copyright (C) 1995-2010, 2012-2015, 2018-2023 Free Software Foundation, Inc.
+dnl Copyright (C) 1995-2024 Free Software Foundation, Inc.
 dnl
 dnl This program is free software: you can redistribute it and/or modify
 dnl it under the terms of the GNU General Public License as published by
@@ -34,7 +34,7 @@ AC_PROG_INSTALL
 
 gt_JAVA_CHOICE
 AS_IF([test "$JAVA_CHOICE" != no], [
-  gt_JAVACOMP([1.5], [1.6])
+  gt_JAVACOMP([1.8], [1.8])
   AC_CHECK_PROG([JAR], [jar], [jar])
   if test -n "$HAVE_JAVACOMP" && test -n "$JAR"; then
     BUILDJAVA=yes
