Find the Objective-C compiler out-of-the-box on AlmaLinux 9 systems.
* gettext-tools/configure.ac: Invoke AC_PROG_OBJC with a customized search list.
* gettext-tools/tests/init-env.in (OBJC, OBJCFLAGS): Set to the configure-
determined values.
* gettext-tools/tests/lang-objc: Use OBJC instead of CC, and OBJCFLAGS instead
of CFLAGS.
* gettext-tools/examples/hello-objc/configure.ac: Invoke AC_PROG_OBJC with a
customized search list. Don't invoke AC_PROC_CC.

--- a/gettext-tools/tests/init-env.in
+++ b/gettext-tools/tests/init-env.in
@@ -7,6 +7,8 @@ CC="@CC@"
 CFLAGS="@CFLAGS@"
 CXX="@CXX@"
 CXXFLAGS="@CXXFLAGS@"
+OBJC="@OBJC@"
+OBJCFLAGS="@OBJCFLAGS@"
 CPPFLAGS="@CPPFLAGS@"
 LDFLAGS="@LDFLAGS@"
 LTLIBINTL="@LTLIBINTL@"
