--- a/gettext-tools/examples/hello-objc/configure.ac
+++ b/gettext-tools/examples/hello-objc/configure.ac
@@ -7,8 +7,9 @@ AC_INIT([hello-objc], [0])
 AC_CONFIG_SRCDIR([hello.m])
 AM_INIT_AUTOMAKE([1.11])
 
-AC_PROG_CC
-AC_SUBST([OBJC], ["$CC"])
+dnl Test for gobjc before gcc, since that's what the EPEL 9 package 'gcc-objc'
+dnl installs (on systems where gcc does not support Objective C).
+AC_PROG_OBJC([gobjc gcc objcc objc cc CC clang])
 AM_GNU_GETTEXT([external])
 AM_GNU_GETTEXT_VERSION([0.22])
 
