--- a/gettext-tools/configure.ac
+++ b/gettext-tools/configure.ac
@@ -611,8 +611,7 @@ AC_CONFIG_FILES([misc/gettextize], [chmod a+x misc/gettextize])
 AC_CONFIG_FILES([misc/autopoint], [chmod a+x misc/autopoint])
 AC_CONFIG_FILES([misc/convert-archive], [chmod a+x misc/convert-archive])
 
-AC_CONFIG_FILES([man/Makefile],
-                [FIX_MAKEFILE_DISTRIB])
+AC_CONFIG_FILES([man/Makefile])
 AC_CONFIG_FILES([man/x-to-1])
 
 AC_CONFIG_FILES([m4/Makefile])
