build: Support "make dist" without prior "make".
This is required by the GNU Coding Standards
<https://www.gnu.org/prep/standards/html_node/Standard-Targets.html>.

Reported by <nroycea+gnu@gmail.com> in
<https://lists.gnu.org/archive/html/bug-gettext/2024-07/msg00010.html>.

* Makefile.am (distdir1): New target.
* configure.ac: Apply FIX_MAKEFILE_DISTRIB on Makefile.
* gettext-runtime/Makefile.am (distdir1, gen-man1): New targets.
* gettext-runtime/configure.ac: Apply FIX_MAKEFILE_DISTRIB on Makefile.
* gettext-tools/Makefile.am (programs-for-distdir, distdir1, gen-man1,
distdir2): New targets.
* gettext-tools/configure.ac: Apply FIX_MAKEFILE_DISTRIB on Makefile.
* gettext-tools/src/Makefile.am (built-sources): New target.

--- a/Makefile.am
+++ b/Makefile.am
@@ -104,6 +104,18 @@ dist-hook: gen-ChangeLogs
 	echo $(VERSION) > $(distdir)/.tarball-version
 
 
+# Support for "make dist" without prior "make".
+
+# Ensure that the prerequisites of gettext-tools/src are built when "make dist"
+# runs.
+# Hidden from automake, but really activated. Works around an automake bug.
+#distdir: distdir1
+.PHONY: distdir1
+distdir1:
+	cd gettext-runtime/intl && $(MAKE) $(AM_MAKEFLAGS)
+	cd libtextstyle && $(MAKE) $(AM_MAKEFLAGS)
+
+
 # Generate ChangeLog.
 
 gen_start_date = 2015-10-13
