Update after gnulib changed.

--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,7 @@
 /gettext-tools/libgettextpo/alloca.in.h
 /gettext-tools/libgettextpo/arg-nonnull.h
 /gettext-tools/libgettextpo/asnprintf.c
+/gettext-tools/libgettextpo/aszprintf.c
 /gettext-tools/libgettextpo/asprintf.c
 /gettext-tools/libgettextpo/assert.in.h
 /gettext-tools/libgettextpo/attribute.h
@@ -199,6 +200,8 @@
 /gettext-tools/libgettextpo/printf-parse.h
 /gettext-tools/libgettextpo/progname.c
 /gettext-tools/libgettextpo/progname.h
+/gettext-tools/libgettextpo/pthread.in.h
+/gettext-tools/libgettextpo/pthread-once.c
 /gettext-tools/libgettextpo/raise.c
 /gettext-tools/libgettextpo/rawmemchr.c
 /gettext-tools/libgettextpo/rawmemchr.valgrind
@@ -210,6 +213,7 @@
 /gettext-tools/libgettextpo/safe-read.c
 /gettext-tools/libgettextpo/safe-write.c
 /gettext-tools/libgettextpo/safe-write.h
+/gettext-tools/libgettextpo/sched.in.h
 /gettext-tools/libgettextpo/setlocale-lock.c
 /gettext-tools/libgettextpo/setlocale_null-unlocked.c
 /gettext-tools/libgettextpo/setlocale_null.c
@@ -274,6 +278,7 @@
 /gettext-tools/libgettextpo/vasnprintf.c
 /gettext-tools/libgettextpo/vasnprintf.h
 /gettext-tools/libgettextpo/vasprintf.c
+/gettext-tools/libgettextpo/vaszprintf.c
 /gettext-tools/libgettextpo/verify.h
 /gettext-tools/libgettextpo/warn-on-use.h
 /gettext-tools/libgettextpo/wchar.in.h
@@ -340,18 +345,22 @@
 /gettext-tools/libgrep/mbtowc.c
 /gettext-tools/libgrep/nl_langinfo.c
 /gettext-tools/libgrep/nl_langinfo-lock.c
+/gettext-tools/libgrep/pthread.in.h
+/gettext-tools/libgrep/pthread-once.c
 /gettext-tools/libgrep/regcomp.c
 /gettext-tools/libgrep/regex.c
 /gettext-tools/libgrep/regex.h
 /gettext-tools/libgrep/regex_internal.c
 /gettext-tools/libgrep/regex_internal.h
 /gettext-tools/libgrep/regexec.c
+/gettext-tools/libgrep/sched.in.h
 /gettext-tools/libgrep/stdbool.in.h
 /gettext-tools/libgrep/stdckdint.in.h
 /gettext-tools/libgrep/stddef.in.h
 /gettext-tools/libgrep/stdint.in.h
 /gettext-tools/libgrep/stdlib.in.h
 /gettext-tools/libgrep/sys_types.in.h
+/gettext-tools/libgrep/time.in.h
 /gettext-tools/libgrep/unistd.c
 /gettext-tools/libgrep/unistd.in.h
 /gettext-tools/libgrep/warn-on-use.h
@@ -874,6 +883,8 @@ core
 /gettext-tools/libgettextpo/limits.h
 /gettext-tools/libgettextpo/locale.h
 /gettext-tools/libgettextpo/obstack.h
+/gettext-tools/libgettextpo/pthread.h
+/gettext-tools/libgettextpo/sched.h
 /gettext-tools/libgettextpo/signal.h
 /gettext-tools/libgettextpo/stdarg.h
 /gettext-tools/libgettextpo/stdbool.h
@@ -902,11 +913,14 @@ core
 /gettext-tools/libgrep/langinfo.h
 /gettext-tools/libgrep/limits.h
 /gettext-tools/libgrep/locale.h
+/gettext-tools/libgrep/pthread.h
+/gettext-tools/libgrep/sched.h
 /gettext-tools/libgrep/stdbool.h
 /gettext-tools/libgrep/stdckdint.h
 /gettext-tools/libgrep/stddef.h
 /gettext-tools/libgrep/stdint.h
 /gettext-tools/libgrep/stdlib.h
+/gettext-tools/libgrep/time.h
 /gettext-tools/libgrep/unistd.h
 /gettext-tools/libgrep/wchar.h
 /gettext-tools/libgrep/wctype.h
