--- a/gettext-tools/tests/Makefile.am
+++ b/gettext-tools/tests/Makefile.am
@@ -141,7 +141,7 @@ TESTS = gettext-1 gettext-2 \
 	xgettext-php-5 \
 	xgettext-php-stackovfl-1 xgettext-php-stackovfl-2 \
 	xgettext-php-stackovfl-3 xgettext-php-stackovfl-4 \
-	xgettext-po-1 xgettext-po-2 xgettext-po-3 xgettext-po-4 \
+	xgettext-po-1 xgettext-po-2 xgettext-po-3 xgettext-po-4 xgettext-po-5 \
 	xgettext-properties-1 xgettext-properties-2 xgettext-properties-3 \
 	xgettext-properties-4 \
 	xgettext-rst-1 xgettext-rst-2 \
