--- a/gettext-tools/src/Makefile.am
+++ b/gettext-tools/src/Makefile.am
@@ -43,8 +43,9 @@ endif
 
 noinst_HEADERS = \
   pos.h message.h po-error.h po-xerror.h po-gram.h po-charset.h \
-  po-lex.h open-catalog.h read-catalog-abstract.h read-catalog.h \
-  read-catalog-file.h read-po.h read-properties.h read-stringtable.h \
+  po-lex.h open-catalog.h read-catalog-special.h \
+  read-catalog-abstract.h read-catalog.h read-catalog-file.h \
+  read-po.h read-properties.h read-stringtable.h \
   str-list.h \
   write-catalog.h write-po.h write-properties.h write-stringtable.h \
   dir-list.h file-list.h po-gram-gen.h cldr-plural.h \
@@ -187,6 +188,7 @@ FORMAT_SOURCE += \
 # libgettextsrc contains all code that is needed by at least two programs.
 libgettextsrc_la_SOURCES = \
   $(COMMON_SOURCE) \
+  read-catalog-special.c \
   read-catalog.c read-catalog-file.c \
   write-catalog.c write-properties.c write-stringtable.c write-po.c \
   msgl-ascii.c \
