build: Enable Automake's dependency tracking.
Quite often, after changing a struct defined in a .h file, I see "make check"
fail. After "make clean; make", "make check" passes again. This wastes my time.
Unlike 20 years ago, I don't want think about which .o files I need to erase
and rebuild. Build times are now much smaller than they were 20 years ago,
especially when configuring with --disable-shared and CFLAGS="-ggdb".

* gnulib-local/modules/gettext-runtime-misc (configure.ac): Don't augment
AUTOMAKE_OPTIONS.
* gettext-runtime/Makefile.am (AUTOMAKE_OPTIONS): Remove 'no-dependencies'.
* gettext-runtime/intl/Makefile.am (AUTOMAKE_OPTIONS): Likewise.
* gettext-runtime/libasprintf/Makefile.am (AUTOMAKE_OPTIONS): Likewise.
* gettext-runtime/src/Makefile.am (AUTOMAKE_OPTIONS): Likewise.
* gettext-runtime/tests/Makefile.am (AUTOMAKE_OPTIONS): Likewise.
* libtextstyle/Makefile.am (AUTOMAKE_OPTIONS): Likewise.
* libtextstyle/lib/Makefile.am (AUTOMAKE_OPTIONS): Likewise.
* gettext-tools/Makefile.am (AUTOMAKE_OPTIONS): Likewise.
* gettext-tools/gnulib-lib/Makefile.am (AUTOMAKE_OPTIONS): Likewise.
* gettext-tools/libgettextpo/Makefile.am (AUTOMAKE_OPTIONS): Likewise.
* gettext-tools/libgrep/Makefile.am (AUTOMAKE_OPTIONS): Likewise.
* gettext-tools/src/Makefile.am (AUTOMAKE_OPTIONS): Likewise.
* gettext-tools/system-tests/Makefile.am (AUTOMAKE_OPTIONS): Likewise.
* gettext-tools/tests/Makefile.am (AUTOMAKE_OPTIONS): Likewise.
* gettext-tools/tests/gnulib-lib/Makefile.am (AUTOMAKE_OPTIONS): Likewise.
* Makefile.am (AUTOMAKE_OPTIONS): Likewise.

--- a/gettext-runtime/libasprintf/Makefile.am
+++ b/gettext-runtime/libasprintf/Makefile.am
@@ -1,5 +1,5 @@
 ## Makefile for the gettext-runtime/libasprintf subdirectory of GNU gettext
-## Copyright (C) 2002-2007, 2009-2011, 2013, 2016, 2018-2019, 2021, 2023 Free Software Foundation, Inc.
+## Copyright (C) 2002-2024 Free Software Foundation, Inc.
 ##
 ## This program is free software: you can redistribute it and/or modify
 ## it under the terms of the GNU Lesser General Public License as published by
@@ -16,7 +16,7 @@
 
 ## Process this file with automake to produce Makefile.in.
 
-AUTOMAKE_OPTIONS = 1.5 gnu no-dependencies
+AUTOMAKE_OPTIONS = 1.5 gnu
 ACLOCAL_AMFLAGS = -I ../../m4 -I ../m4 -I gnulib-m4
 
 SUBDIRS = gnulib-lib
