--- a/gettext-runtime/Makefile.am
+++ b/gettext-runtime/Makefile.am
@@ -16,7 +16,7 @@
 
 ## Process this file with automake to produce Makefile.in.
 
-AUTOMAKE_OPTIONS = 1.5 gnu no-dependencies
+AUTOMAKE_OPTIONS = 1.5 gnu
 ACLOCAL_AMFLAGS = -I m4 -I ../m4 -I gnulib-m4
 
 # The list of subdirectories depends on whether --disable-libasprintf was
