--- a/gettext-tools/system-tests/Makefile.am
+++ b/gettext-tools/system-tests/Makefile.am
@@ -1,5 +1,5 @@
 ## Makefile for the gettext-tools/system-tests subdirectory of GNU gettext
-## Copyright (C) 1995-2023 Free Software Foundation, Inc.
+## Copyright (C) 1995-2024 Free Software Foundation, Inc.
 ##
 ## This program is free software: you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
@@ -16,7 +16,7 @@
 
 ## Process this file with automake to produce Makefile.in.
 
-AUTOMAKE_OPTIONS = 1.11 gnits no-dependencies color-tests
+AUTOMAKE_OPTIONS = 1.11 gnits color-tests
 EXTRA_DIST =
 MOSTLYCLEANFILES = core *.stackdump
 
