--- a/gettext-tools/tests/Makefile.am
+++ b/gettext-tools/tests/Makefile.am
@@ -16,7 +16,7 @@
 
 ## Process this file with automake to produce Makefile.in.
 
-AUTOMAKE_OPTIONS = 1.11 gnits no-dependencies color-tests
+AUTOMAKE_OPTIONS = 1.11 gnits color-tests
 SUBDIRS = gnulib-lib
 EXTRA_DIST =
 MOSTLYCLEANFILES = core *.stackdump
