Rename some files.
* gettext-tools/src/read-po-internal.h: Renamed from
gettext-tools/src/po-gram.h.
* gettext-tools/src/read-po-lex.h: Renamed from gettext-tools/src/po-lex.h.
* gettext-tools/src/read-po-lex.c: Renamed from gettext-tools/src/po-lex.c.
* gettext-tools/src/read-po-gram.y: Renamed from
gettext-tools/src/po-gram-gen.y.
* gettext-tools/src/*.h: Update.
* gettext-tools/src/*.c: Update.
* gettext-tools/src/FILES: Update.
* gettext-tools/src/Makefile.am: Update.
* gettext-tools/libgettextpo/Makefile.am: Update.

--- a/gettext-tools/libgettextpo/Makefile.am
+++ b/gettext-tools/libgettextpo/Makefile.am
@@ -62,12 +62,12 @@ libgettextpo_la_AUXSOURCES = \
   ../src/write-catalog.c \
   ../src/write-po.c \
   ../src/po-charset.c \
-  ../src/po-lex.c \
-  ../src/po-gram-gen.c \
   ../src/read-catalog-special.c \
   ../src/read-catalog-abstract.c \
   ../src/read-catalog.c \
   ../src/read-po.c \
+  ../src/read-po-lex.c \
+  ../src/read-po-gram.c \
   ../src/plural-table.c \
   ../src/format-c.c \
   ../src/format-c++-brace.c \
