Refactor: Remove code duplication.
* gettext-tools/src/po-xerror.h: Include xerror-handler.h. Remove all
declarations.
(PO_SEVERITY_*): Define as aliases of CAT_SEVERITY_*.
(po_xerror, po_xerror2): New macros.
* gettext-tools/src/po-xerror.c: Remove file.
* gettext-tools/src/Makefile.am (COMMON_SOURCE): Remove po-xerror.c.
* gettext-tools/src/msgmerge.c (silent_xerror2): New function.
(match_domain): Pass a stack-allocated xerror_handler to check_plural_eval.
* gettext-tools/woe32dll/gettextsrc-exports.c (po_xerror, po_xerror2): Remove
exports.
* gettext-tools/po/POTFILES.in: Add src/xerror-handler.c. Remove
src/po-xerror.c.

--- a/gettext-tools/po/POTFILES.in
+++ b/gettext-tools/po/POTFILES.in
@@ -90,7 +90,6 @@ src/msgunfmt.c
 src/msguniq.c
 src/open-catalog.c
 src/po-charset.c
-src/po-xerror.c
 src/read-catalog.c
 src/read-csharp.c
 src/read-desktop.c
@@ -119,6 +118,7 @@ src/x-c.c
 src/x-csharp.c
 src/x-desktop.c
 src/x-elisp.c
+src/xerror-handler.c
 src/xg-arglist-parser.c
 src/xg-check.c
 src/xg-encoding.c
