libgettextpo: Now multithread-safe.
* gettext-tools/libgettextpo/multithread-safe.txt: New file.
* gettext-tools/libgettextpo/Makefile.am (EXTRA_DIST): Add it.
* gettext-tools/doc/gettext.html (libgettextpo): Document multithread-safety.
* NEWS: Mention it.

--- a/gettext-tools/libgettextpo/Makefile.am
+++ b/gettext-tools/libgettextpo/Makefile.am
@@ -213,6 +213,9 @@ else
 endif
 	mv gettext-po.h-tmp gettext-po.h
 
+# Internal documentation.
+EXTRA_DIST += multithread-safe.txt
+
 # Allow users to use "gnulib-tool --update".
 EXTRA_DIST += gnulib-m4/gnulib-cache.m4
 
