xgetcwd: Port to native Windows.
Use a variant of the gnulib module 'xgetcwd' instead of our own (older) one.

* gnulib-local/lib/xgetcwd.h: Remove file.
* gnulib-local/lib/xgetcwd.c: Remove file.
* gnulib-local/modules/xgetcwd: Remove file.
* gnulib-local/modules/xgetcwd.diff: New file.
* gnulib-local/Makefile.am (EXTRA_DIST): Update.

--- a/gnulib-local/Makefile.am
+++ b/gnulib-local/Makefile.am
@@ -1,5 +1,5 @@
 ## Makefile for the gnulib-local directory of GNU gettext
-## Copyright (C) 2006-2008, 2010-2012, 2014-2023 Free Software Foundation, Inc.
+## Copyright (C) 2006-2024 Free Software Foundation, Inc.
 ##
 ## This program is free software: you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
@@ -146,8 +146,6 @@ lib/regex_internal.h.diff \
 lib/unistd.in.h.diff \
 lib/xerror.c \
 lib/xerror.h \
-lib/xgetcwd.c \
-lib/xgetcwd.h \
 m4/backupfile.m4 \
 m4/java.m4 \
 m4/libxml.m4 \
@@ -163,7 +161,7 @@ modules/libxml \
 modules/markup \
 modules/mem-hash-map \
 modules/xerror \
-modules/xgetcwd
+modules/xgetcwd.diff
 
 # Extra files to be installed.
 
