build: Fix build failure when people set DESTDIR already during 'make'.
Reported by Henrik Holst <henrik.holst@outlook.com> in
<https://lists.gnu.org/archive/html/bug-gettext/2024-09/msg00005.html>.

* gettext-tools/src/Makefile.am (textstyle.h): Pass an empty DESTDIR to
libtextstyle/lib/Makefile.

--- a/gettext-tools/src/Makefile.am
+++ b/gettext-tools/src/Makefile.am
@@ -344,7 +344,7 @@ else
 textstyle.h textstyle/stdbool.h textstyle/version.h textstyle/woe32dll.h:
 	here=`pwd`; \
 	cd ../../libtextstyle/lib && \
-	  $(MAKE) install-nobase_includeHEADERS install-nobase_nodist_includeHEADERS includedir="$$here"
+	  $(MAKE) install-nobase_includeHEADERS install-nobase_nodist_includeHEADERS DESTDIR= includedir="$$here"
 BUILT_SOURCES    += textstyle.h textstyle/stdbool.h textstyle/version.h textstyle/woe32dll.h
 MOSTLYCLEANFILES += textstyle.h textstyle/stdbool.h textstyle/version.h textstyle/woe32dll.h
 # Where to find the built libtextstyle library.
