tests: Add xgettext tests regarding string concatenation.
* gettext-tools/tests/xgettext-sh-1: Add string concatenation tests.
* gettext-tools/tests/xgettext-lua-1: Add a string concatenation test.
* gettext-tools/tests/xgettext-vala-1: Likewise.
* gettext-tools/tests/xgettext-javascript-3: Enhance the string concatenation
test.
* gettext-tools/tests/xgettext-csharp-5: Update comment.
* gettext-tools/tests/xgettext-csharp-6: Likewise.
* gettext-tools/tests/xgettext-java-5: Likewise.
* gettext-tools/tests/xgettext-java-6: Likewise.
* gettext-tools/tests/xgettext-lua-2: Likewise.
* gettext-tools/tests/xgettext-perl-7: Likewise.
* gettext-tools/tests/xgettext-php-3: Likewise.
* gettext-tools/tests/xgettext-python-1: Likewise.
* gettext-tools/tests/xgettext-python-2: Likewise.
* gettext-tools/tests/xgettext-python-4: Likewise.
* gettext-tools/tests/xgettext-ruby-1: Likewise.
* gettext-tools/tests/xgettext-sh-5: Likewise.
* gettext-tools/tests/xgettext-ruby-2: New file, based on
gettext-tools/tests/xgettext-csharp-6.
* gettext-tools/tests/Makefile.am (TESTS): Add it.

--- a/gettext-tools/tests/Makefile.am
+++ b/gettext-tools/tests/Makefile.am
@@ -151,7 +151,7 @@ TESTS = gettext-1 gettext-2 \
 	xgettext-python-7 xgettext-python-8 \
 	xgettext-python-stackovfl-1 xgettext-python-stackovfl-2 \
 	xgettext-python-stackovfl-3 xgettext-python-stackovfl-4 \
-	xgettext-ruby-1 \
+	xgettext-ruby-1 xgettext-ruby-2 \
 	xgettext-scheme-1 xgettext-scheme-2 xgettext-scheme-3 \
 	xgettext-scheme-4 xgettext-scheme-5 xgettext-scheme-6 \
 	xgettext-scheme-7 xgettext-scheme-8 \
